@@ -58,7 +58,8 @@ IDI_TRAY_ICON_BUSY      ICON    DISCARDABLE     "res/tray_busy.ico"
 * stop, config, terminal, mft optimization icons - from Silk icon set 1.3 http://www.famfamfam.com/lab/icons/silk/
 * report, script icons - from http://brandspankingnew.net/download.php?file=doc_types_v2.zip
 * repeat icon - by Interactivemania http://www.iconfinder.com/icondetails/49846/16/alt_media_repeat_icon
-* large repeat, stop, terminal, script and help icons - from Fugue icon set http://p.yusukekamiyamane.com/
+* large repeat, pause, stop, terminal, script, help; light bulb,
+* star icons - from Fugue icon set http://p.yusukekamiyamane.com/
 * All icons are licensed under terms permitting the use for non commercial purposes.
 */
 IDB_TOOLBAR_16                    BITMAP  DISCARDABLE     "res/toolbar16.bmp"
@@ -120,7 +121,6 @@ END
 
 IDR_ACCELERATOR2 ACCELERATORS DISCARDABLE 
 BEGIN
-/*    VK_ESCAPE,     IDOK,                    VIRTKEY, NOINVERT*/
     VK_F1,         IDC_CREDITS,             VIRTKEY, NOINVERT
     VK_F2,         IDC_LICENSE,             VIRTKEY, NOINVERT
     VK_F3,         IDC_HOMEPAGE,            VIRTKEY, NOINVERT
@@ -133,6 +133,7 @@ BEGIN
     VK_F7,         IDM_QUICK_OPTIMIZE,          VIRTKEY, NOINVERT
     VK_F7,         IDM_FULL_OPTIMIZE,           VIRTKEY, CONTROL, NOINVERT
     VK_F7,         IDM_OPTIMIZE_MFT,            VIRTKEY, SHIFT,   NOINVERT
+    VK_SPACE,      IDM_PAUSE,                   VIRTKEY, NOINVERT
     "C",           IDM_STOP,                    VIRTKEY, CONTROL, NOINVERT
     "R",           IDM_REPEAT_ACTION,           VIRTKEY, SHIFT,   NOINVERT
     "M",           IDM_IGNORE_REMOVABLE_MEDIA,  VIRTKEY, CONTROL, NOINVERT
